--- a/css/index.css
+++ b/css/index.css
@@ -163,22 +163,24 @@ h1, h2, h3, h4, h5 {
   margin: 0 auto;
 }
 
-@media(max-width: 800px){.container .top-bar {display: flex;
+@media(max-width: 800px)
+{
+.container .top-bar {display: flex;
   flex-direction: column-reverse;
 justify-content:center;
 align-items: center;
   margin-top: 20px;}
-.container.logo {align items: center;
+.container .logo {align-items: center;
   margin-bottom: 0 auto;
 width: 100%;}
 .container nav{ padding-top: 10px;}
 .container nav a {padding: 1px;
-color: black;
+color: grey;
 text-decoration: none;
 font-size: 16px;}
 
 .container .cta-text { position: relative;
-  ?background: grey;
+  background: white;
  /* margin-left: 100px;*/
   height:350px;
   font-size:75px;
