--- a/css/index.css
+++ b/css/index.css
@@ -53,13 +53,14 @@ table {
     box-sizing: border-box;
 }
 .top-bar{display: flex;
-padding: 2%;
-margin-left: 1%;}
+    padding: 2%;
+    margin-left: 1%;}
+    
 html, body {
     height: 100%;
     font-family: sans-serif;
 }
-/* header */
+
 
 header nav {
 
@@ -84,7 +85,7 @@ header .logo {
   margin-top: 15px;
 }
 
-/* cta */
+
 
  .cta-text {
   display: inline-block;
@@ -105,7 +106,7 @@ header .logo {
   border: 1px solid black;
   cursor: pointer;
 }
- .cta-text button:hover {
+ text button:hover {
   background: black;
   color: white;
 }
@@ -115,12 +116,13 @@ header .logo {
   margin-top: 40px;
   
 }
- .head1 {width:47%;
-  padding: 2%}
-.text-content{padding: 2%;
-margin-left: 20px;}
-.top-content{display:flex;
-  justify-content: center;
+ .header1 {
+width:47%; padding: 2%}
+.text-content{
+    padding: 2%; margin-left: 20px;}
+.top-content{
+display:flex;
+justify-content: center;
   margin-top: 20px;
   padding-top:20px;
   border-top: solid black;
