--- a/css/index.css
+++ b/css/index.css
@@ -87,7 +87,7 @@ header .logo {
 
 
 
- .cta-text {
+ .Quote{
   display: inline-block;
   vertical-align: top;
   font-size: 77px;
@@ -97,7 +97,7 @@ header .logo {
   padding: 20px;
 }
 
- .cta-text button {
+ .Quote button {
   background: white;
   vertical-align: top;
   margin-top: 15px;
@@ -118,7 +118,7 @@ header .logo {
 }
  .header1 {
 width:47%; padding: 2%}
-.text-content{
+.paragraph4{
     padding: 2%; margin-left: 20px;}
 .top-content{
 display:flex;
@@ -127,7 +127,7 @@ justify-content: center;
   padding-top:20px;
   border-top: solid black;
 }
-.bottom-content{display:flex;
+.bottom {display:flex;
 justify-content: space-evenly;
 margin-top: 20px;}
 
