updated logo and changed code for header1

--- a/css/index.css
+++ b/css/index.css
@@ -48,7 +48,7 @@ table {
 	border-spacing: 0;
 }
 
-/* Set every element's box-sizing to border-box */
+
 * {
     box-sizing: border-box;
 }
@@ -75,11 +75,6 @@ header nav a {
   color: gray;
   text-decoration: none;
 }
-
-header nav a:hover {
-  text-decoration: underline;
-}
-
 
 header .logo {
   margin-top: 15px;
@@ -119,7 +114,9 @@ header .logo {
  .header1 {
 width:47%; padding: 2%}
 .paragraph4{
-    padding: 2%; margin-left: 20px;}
+  width: 47%; 
+  padding: 2%;
+  padding: 2%; margin-left: 20px;}
 .top-content{
 display:flex;
 justify-content: center;
@@ -127,9 +124,14 @@ justify-content: center;
   padding-top:20px;
   border-top: solid black;
 }
-.bottom {display:flex;
-justify-content: space-evenly;
-margin-top: 20px;}
+.bottom {
+
+display:flex;
+justify-content: center;
+  margin-top: 20px;
+  padding-top:20px;
+  border-top: solid black;
+}
 
 .middle-img {
   margin-left: 25px;
@@ -174,7 +176,7 @@ align-items: center;
   margin-top: 20px;}
 .container .logo {align-items: center;
   margin-bottom: 0 auto;
-width: 100%;}
+  width: 75%;}
 .container nav{ padding-top: 10px;}
 .container nav a {padding: 1px;
 color: grey;
@@ -183,7 +185,7 @@ font-size: 16px;}
 
 .container .cta-text { position: relative;
   background: white;
- /* margin-left: 100px;*/
+ 
   height:350px;
   font-size:75px;
   font-family:"Bangers";
@@ -216,14 +218,17 @@ font-size: 16px;}
     nav a:last-child {
       border-bottom: 1px solid silver;}
   .head1{width: 100%;}
-  .container .top-content{display: flex;
+  
+  .container .top-content{
+    display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;}
   .middle-img{width: 100%}
-  .bottom-content{display:flex;
+  .bottom{
+    display: flex;
   flex-direction: column;
-  padding: 5%;
-  margin-bottom: 5%;}}
-
+  justify-content: center;
+  align-items: center;}
+  }
 
